# routes/api.php
@@ -7,4 +7,5 @@ use Illuminate\Support\Facades\Route;
 
 Route::prefix('v1')->name('v1.')->group(function (): void {
     Route::post('clients', [ClientController::class, 'store'])->name('clients.store');
+    Route::get('clients/{id}', [ClientController::class, 'show'])->whereNumber('id')->name('clients.show');
 });
